Add realtime update

--- a/public/index.html
+++ b/public/index.html
@@ -14,16 +14,9 @@
         margin: 32px;
       }
     </style>
-    <script>
-      const eventSource = new EventSource("http://localhost:2000");
-      eventSource.onmessage = (event) => {
-        if (event.data === "refresh") {
-          // location.reload();
-        }
-      };
-    </script>
+    <script src="script.js"></script>
   </head>
   <body>
-    <main>{content}</main>
+    <main id="proto"></main>
   </body>
 </html>
