Use typescript to watch files

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,14 @@
       body {
         background: gray;
         margin: 0;
+        overflow: scroll;
       }
-      main {
+      #proto {
         display: flex;
         flex-direction: row;
+        width: fit-content;
         gap: 32px;
-        margin: 32px;
+        padding: 32px;
       }
     </style>
     <script src="script.js"></script>
