Make content draggable

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
     <script src="script.js"></script>
   </head>
   <body onload="init()">
-    <main id="proto"></main>
+    <main id="draggable-container">
+      <div id="content"></div>
+    </main>
     <div id="controls">
       <button onclick="zoomOut()">Zoom Out</button>
       <button onclick="resetZoom()">Reset</button>
