Add zoom to fit

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,14 @@
     <script src="script.js"></script>
   </head>
   <body onload="init()">
-    <main id="draggable-container">
+    <main id="container">
       <div id="content"></div>
     </main>
     <div id="controls">
       <button onclick="zoomOut()">Zoom Out</button>
-      <button onclick="resetZoom()">Reset</button>
+      <button onclick="zoomReset()">Reset</button>
       <button onclick="zoomIn()">Zoom In</button>
+      <button onclick="zoomFit()">Fit</button>
     </div>
   </body>
 </html>
