feat: add scene selection

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       <div id="content"></div>
     </main>
     <div id="controls">
+      <select id="scene" onchange="sceneChange()">
+        <option value="one">Scene 1</option>
+        <option value="two">Scene 2</option>
+      </select>
       <button onclick="zoomFit()">Fit</button>
       <button onclick="zoomOut()">Zoom Out</button>
       <button onclick="zoomReset()">Reset</button>
